# remote-control

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  NEWS  README.md  TODO  configure.ac
data/: Makefile.am  de.avionic-design.RemoteControl.service.in
data/html/: browser.html
doc/: Doxyfile.in  Makefile.am  browser.conf.xml.in  remote-control.conf.xml.in
ext/: Makefile.am
ext/rcrpc/: .gitignore  Makefile.am  configure.ac
ext/rcrpc/m4/: libtool.m4
ext/rcrpc/src/rcrpc/: Makefile.am  audio.c  backlight.c  io.c  lldp.c  media-player.c  modem.c  net.c  rcrpc.c  remote-control-rpc.h  smartcard.c  task-manager.c  tuner.c  voip.c
ext/rcrpc/src/rcrpc-client/: Makefile.am  audio.c  events.c  media-player.c  mixer.c  remote-control.c  remote-control.h  voip.c
ext/rcrpc/tests/: Makefile.am
src/: Makefile.am  protocol.xml
src/client/: Makefile.am  audio.c  backlight.c  card.c  events.c  gpio.c  handset.c  irq.c  lldp.c  medcom.c  media-player.c  mixer.c  modem.c  remote-control.h  remote-control.pc.in  rfid.c  sound-manager.c  task-manager.c  tuner.c  voip.c
src/common/: Makefile.am  alsaloop.c  find-device-udev.c  find-device.h  gdevicetree.c  gdevicetree.h  gkeyfile.c  gkeyfile.h  glogging.c  glogging.h  gsysfs.c  gsysfs.h  gsysfsbacklight.c  gsysfsbacklight.h  gsysfsgpio.c  gsysfsgpio.h  guri.c  guri.h  rc-alsaloop.h
src/core/: Makefile.am  audio-alsa.c  audio-null.c  audio-pulse.c  backlight-sysfs.c  cursor-movement.c  gpio-gpiodev.c  gpio-sysfs.c  handset-ptip.c  lldp-monitor-lldpctl.c  lldp-monitor.c  media-player-gtk-gst.c  media-player-gtk-vlc.c  modem-manager-libmodem.c  net-udp.c  remote-control.c  remote-control.h  remote-control.pc.in  smartcard-generic.c  smartcard-info.c  smartcard-null.c  smartcard-nxp.c  smartcard-pcsc.c  task-manager.c  usb-handset.c  utils.c
src/lib/: Makefile.am  audio-alsa.c  audio-null.c  backlight-dpms.c  backlight-null.c  cursor-movement.c  gpio-null.c  net-udp.c  remote-control.c  remote-control.h  smartcard-generic.c  smartcard-info.c  smartcard-nxp.c  smartcard-pcsc.c  smbus.h
src/server/: Makefile.am  app-watchdog-dbus.c  app-watchdog-null.c  app-watchdog.c  audio-alsa.c  audio-backend.h  audio-null.c  audio-pulse.c  audio.c  backlight-dpms.c  backlight-medatom.c  backlight-null.c  backlight-sysfs.c  backlight.c  card.c  cursor-movement.c  event-manager.c  gpio-gpiodev.c  gpio-null.c  gpio-sysfs.c  gpiolib.c  gpiolib.h  handset-null.c  handset-ptip.c  handset.c  io.c  irq.c  lldp-monitor-lldpctl.c  lldp-monitor.c  lldp.c  media-player-gtk-gst.c  media-player-gtk-vlc.c  media-player-null.c  media-player.c  media.c  mixer-alsa.c  mixer-null.c  mixer.c  modem-manager-libmodem.c  modem-manager-null.c  (+32 more)
tests/: Makefile.am  ajax-dead-lock.c  ajax-dead-lock.html  alert-dead-lock.c  gkeyfilemerge.c  media-player-no-update-background.sh  media-player-test.c  medial.c  net-udp.c
