servicedir = $(datadir)/dbus-1/services
service_DATA = \
	de.avionic-design.RemoteControl.service

BUILT_SOURCES = \
	de.avionic-design.RemoteControl.service

htmldir = $(pkgdatadir)/html
html_DATA = \
	html/browser.html

iconsdir = $(pkgdatadir)/icons
icons_DATA = \
	icons/back.svg \
	icons/forward.svg \
	icons/go.svg

EXTRA_DIST = \
	$(icons_DATA) \
	$(html_DATA)
